--- a/index_23.html
+++ b/index_23.html
@@ -7,8 +7,6 @@
 </head>
 <body>
     <p>ABOBAS</p>
-    <p>Git sts</p>
-    <p>Git sts 2</p>
-    <p>Git sts 43</p>
+    <p>Lorem, ipsum.</p>
 </body>
 </html>
