--- a/index_23.html
+++ b/index_23.html
@@ -7,7 +7,9 @@
 </head>
 <body>
     <p>ABOBAS</p>
-    <p>Lorem, ipsum.</p>
-    <p>Lorem, ipsum.</p>
+
+    <p>Lorem ipsum dolor sit amet consectetur 
+        adipisicing elit. Quisquam, esse? Pariatur, quam.</p>
+
 </body>
 </html>
