new new new branch

--- a/index_23.html
+++ b/index_23.html
@@ -7,9 +7,7 @@
 </head>
 <body>
     <p>ABOBAS</p>
-
-    <p>Lorem ipsum dolor sit amet consectetur 
-        adipisicing elit. Quisquam, esse? Pariatur, quam.</p>
+<h1>Nova 4 </h1>
 
 </body>
 </html>
