--- a/index_23.html
+++ b/index_23.html
@@ -6,9 +6,6 @@
     <title>Document</title>
 </head>
 <body>
-    <p>ABOBAS</p>
-    <p>Git sts</p>
-    <p>Git sts 2</p>
-    <p>Git sts 43</p>
+    <h1>TESETESETE</h1>
 </body>
 </html>
