[ABC-33] fixed bug

--- a/index_23.html
+++ b/index_23.html
@@ -6,14 +6,8 @@
     <title>Document</title>
 </head>
 <body>
-    <p>ABOBAS</p>
-    <p>Lorem, ipsum.</p>
-    <p>Lorem, ipsum.</p>
-    <p>Lorem, ipsum.</p>
-    <p>Lorem, ipsum.</p>
-    <p>Lorem, ipsum.</p>
-    <p>Lorem, ipsum.</p>
-    <p>Lorem, ipsum.</p>
-    <p>Lorem, ipsum.</p>
+    <p>ABOBAS228</p>
+    <h1>ISPRAV BUG</h1>
+
 </body>
 </html>
